syntax = "proto3";
option go_package = "proto/DeleteSession";
package go.micro.srv.DeleteSession;

service DeleteSession {
	rpc DeleteSession(Request) returns (Response) {}
}

message Message {
	string say = 1;
}

message Request {
	string SessionId = 1;
}

message Response {
	string Errno = 1;
	string Errmsg = 2;
}


message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
