syntax = "proto3";
option go_package = "proto/PostLogin";
package go.micro.srv.PostLogin;

service PostLogin {
	rpc PostLogin(Request) returns (Response) {}
	rpc Stream(StreamingRequest) returns (stream StreamingResponse) {}
	rpc PingPong(stream Ping) returns (stream Pong) {}
}

message Message {
	string say = 1;
}

message Request {
	string Mobile = 1;
	string Password = 2;
}

message Response {
	string Errno = 1;
	string Errmsg = 2;
	string SessionId = 3;
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
